--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
-# This is a basic workflow to help you get started with Actions
+# GitHub Actions Workflow for Python CI + Docker + Security Scan
 
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
   pull_request:
@@ -40,7 +38,7 @@ jobs:
         run: |
           source venv/bin/activate
           pytest tests/
-  
+
   docker:
     name: Docker Build & Push
     runs-on: ubuntu-latest
@@ -58,8 +56,28 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t your-nickname/moscow-time-app:latest .
+          docker build -t decafattic/moscow-time-app:latest .
 
       - name: Push Docker Image
         run: |
-          docker push your-nickname/moscow-time-app:latest
+          docker push decafattic/moscow-time-app:latest
+
+  security:
+    name: Snyk Security Scan
+    runs-on: ubuntu-latest
+    needs: docker
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Install Dependencies
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
+
+      - name: Run Snyk Vulnerability Scan
+        uses: snyk/actions/python@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
