--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,13 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt
+          pip install -r app_python/requirements.txt
           pip install pytest Flask-Testing
 
       - name: Run Linter (flake8)
         run: |
           pip install flake8
-          flake8 time_app.py
+          flake8 app_python/time_app.py
 
       - name: Run Tests
         run: |
