--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run Tests
         run: |
           source venv/bin/activate
-          pytest tests/
+          pytest app_python/test_app.py
 
   docker:
     name: Docker Build & Push
