--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t decafattic/moscow-time-app:latest .
+          docker build -t decafattic/moscow-time-app:latest -f app_python/Dockerfile app_python/
 
       - name: Push Docker Image
         run: |
